Initial Commit for YARA engine Playbook

--- a/public/yara/engine/engine_yara.yaml
+++ b/public/yara/engine/engine_yara.yaml
@@ -5,7 +5,7 @@ description: |
 type: detection
 detection_id: ''
 detection_category: ''
-detection_type: yara
+detection_type: strelka
 contributors:
   - SecurityOnionSolutions
 created: 2025-03-14
